[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Michael Ketchel <michael.ketchel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
